package edu.utn.tp_disenyo.hotel_premier.util;

public enum Estado {
    OCUPADO,
    RESERVADO,
    FUERA_DE_SERVICIO
}
