package edu.utn.tp_disenyo.hotel_premier.util;

public enum TipoHabitacion {
    INDIVIDUAL_ESTANDAR,
    DOBLE_ESTANDAR,
    DOBLE_SUPERIOR,
    SUPERIOR_FAMILY_PLAN,
    SUITE_DOBLE
}
